--- a/olayenikan-michael/package.json
+++ b/olayenikan-michael/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-portfolio",
+  "name": "olayenikan-michael",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "next": "16.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1"
   }
 }
